Fix links spacing

--- a/client/my-sites/sidebar-unified/style.scss
+++ b/client/my-sites/sidebar-unified/style.scss
@@ -32,6 +32,7 @@ $font-size: rem( 14px );
 			padding: 0;
 			color: var( --color-sidebar-text );
 			align-items: center;
+			padding-left: 8px;
 
 			&:hover {
 				background-color: #191e23;
@@ -44,14 +45,6 @@ $font-size: rem( 14px );
 			padding: $sidebar-item-padding;
 		}
 
-		// .sidebar__menu-link {
-		// 	font-size: $font-size;
-		// 	font-weight: 400;
-		// 	line-height: 1.3;
-		// 	padding: $sidebar-item-padding;
-		// 	color: #eee;
-		// }
-
 		.sidebar__expandable-arrow,
 		.gridicons-external {
 			display: none;
@@ -61,7 +54,7 @@ $font-size: rem( 14px );
 
 		.sidebar__menu.is-togglable {
 			.sidebar__heading {
-				padding: 0;
+				padding: 0 0 0 8px;
 				font-weight: 400;
 
 				&:hover {
@@ -110,5 +103,12 @@ $font-size: rem( 14px );
 				padding: 0;
 			}
 		}
+	}
+
+	//client/my-sites/current-site/style.scss
+	.current-site .site,
+	.current-site .all-sites,
+	.current-site__switch-sites {
+		border-color: transparent;
 	}
 }
